# yt-dlpx

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: publish.yml
src/ytdlpx/: __init__.py  app.py
