[project]
name = "ytdlp-downloader"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "customtkinter>=5.2.0",
    "yt-dlp>=2024.1.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[tool.uv]
# Use Homebrew / system Python which ships with Tcl/Tk.
# uv's own managed builds (python-build-standalone) omit Tcl/Tk on macOS.
python-preference = "only-system"
